# visual-generation

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: visual-designer.md
brand/: fonts.css  tokens.json
references/design-kit-visemi/: 01-design-philosophy.md  02-brand-guidelines.md  05-canva-and-drive-workflow.md
references/sample-design-kit/: 04-output-specs.md  06-web-design-system.md  README.md
scripts/evals/: run_evals.py
scripts/ops/: grade_brand.py  grade_doc.py  grade_rubric.py  render_canvas.py  render_doc.py
scripts/tests/: conftest.py  test_brand_assets.py  test_brand_injection.py  test_brand_lint_palette.py  test_brand_resolver.py  test_canvas_formats.py  test_doc_deps.py  test_doc_evals.py  test_doc_html_render.py  test_doc_lint.py  test_doc_render.py  test_doc_schema.py  test_doc_skill.py  test_doc_templates.py  test_formats.py  test_preflight.py  test_qr.py  test_reference_exemplars_clean.py  test_schema_event_layouts.py  test_schema_poster_layouts.py  test_schema_social_layouts.py  test_slidegen_brand.py  test_slidegen_brand_lint.py  test_slidegen_components.py  test_slidegen_deck.py  test_slidegen_evals.py  test_slidegen_html.py  test_slidegen_icons.py  test_slidegen_onepager.py  test_slidegen_render.py  test_slidegen_rubric.py  test_slidegen_schema.py  test_theme_select.py  test_tokens.py
scripts/util/: extract_tokens.py
skills/generate-doc/: SKILL.md
skills/generate-poster/: SKILL.md
skills/generate-slides/: SKILL.md
(+120 files in other folders)
